--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -29,7 +29,7 @@
         </div>
 
         <div class="container-fluid justify-content-center">
-            <div class="d-flex justify-content-center flex-wrap ">
+            <div class="d-flex justify-content-center flex-wrap">
                 {% for item in items %}
                     <div class="d-flex justify-content-center">
                         <div class="card">
@@ -38,9 +38,9 @@
                                  alt="{{ item.title }}" width="250">
                             <div class="card-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
-                                <div id="butons">
-                                    <a href="{{ path('item_details', {'id': item.getId()}) }}"
-                                       class="btn btn-info"><i class="fas fa-info"></i></a>
+                                <div>
+                                    <a id="item_open_button" href="{{ path('item_details', {'id': item.getId()}) }}"
+                                       class="btn btn-default btn-lg btn-block">More</a>
                                 </div>
                             </div>
                         </div>
