Fix id duplcated validation

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -39,7 +39,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
                                 <div>
-                                    <a id="item_open_button" href="{{ path('item_details', {'id': item.getId()}) }}"
+                                    <a class="item_open_button" href="{{ path('item_details', {'id': item.getId()}) }}"
                                        class="btn btn-default btn-lg btn-block">More</a>
                                 </div>
                             </div>
