Fix autofocus duplcation

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,7 +11,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputUsername" class="sr-only">{{ 'LOGIN.USERNAME.LABEL' | trans }}</label>
         <input type="text" value="{{ last_username }}" name="username" class="form-control form_grey_input inputUsername"
-               placeholder="Username" required autofocus>
+               placeholder="Username" required>
         <label for="inputPassword" class="sr-only">{{ 'LOGIN.PASSWORD.LABEL' | trans }}</label>
         <input type="password" name="password" class="form-control form_grey_input inputPassword" placeholder="Password" required>
 
