Fix input without id

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,12 +73,12 @@ body {
     color: gray();
 }
 
-.inputUsername {
+.inputUsernameField {
     margin: 0;
     margin-bottom: 10px;
 }
 
-.inputPassword {
+.inputPasswordField {
     margin: 0;
     margin-bottom: 10px;
 }
