--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
 
     <article id="description">
-        <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-thumbnail" width="500px"
-             height="200px">
+        <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-thumbnail" width="500"
+             height="200" alt="{{ item.title }}">
 
         <table class="table">
             <tbody>
