Fix id where it should be class

--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <article id="description">
+    <article class="description">
         <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}" class="img-thumbnail" width="500"
              height="200" alt="{{ item.title }}">
 
