--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -33,9 +33,11 @@
                 {% for item in items %}
                     <div class="d-flex justify-content-center">
                         <div class="card">
-                            <img class="card-img-top"
-                                 src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
-                                 alt="{{ item.title }}" width="250">
+                            <a href="{{ path('item_details', {'id': item.getId()}) }}">
+                                <img class="card-img-top"
+                                     src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
+                                     alt="{{ item.title }}" width="250">
+                            </a>
                             <div class="card-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
                                 <div>
