--- a/public/css/style.css
+++ b/public/css/style.css
@@ -497,8 +497,11 @@ a#navbar_gravatar.nav-link {
 @media screen and (max-width:800px){
     .card {
         width: 130px;
-        height: 170px;
+       height: 170px;
 
+    }
+    .card img {
+        height: 126px;
     }
     .card-title {
         margin: 0.1rem;
