--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,152 +4,155 @@
 
 {% block body %}
     <div class="d-flex flex-wrap justify-content-center">
-    <div class="padding_admin_table">
-
-    <h1>Items</h1>
-    <br>
-    {% if items == null %}
-        <div class="empty-items">
-            No Items found
-        </div>
-    {% else %}
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Items</th>
-                <th scope="col">Title</th>
-                <th scope="col">Reported</th>
-                <th scope="col">Owner</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for item in items %}
-                <tr>
-                    {% for picture in pictures %}
-                        {% if picture.item.id  == item.getId() %}
-                            <th scope="row"> <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
-                                     alt="{{ item.title }}" width="53px" height="53px">
-                            </th>
-                        {% endif %}
-                    {% endfor %}
-                    <th scope="row" >{{ item.title }}</th>
-                    <td>
-                        {% set reported = false %}
-                        {% for stats in item.getStatuses() %}
-                            {% if stats.getStatuses().getLabel() == 'reported' %}
-                                {% set reported = true %}
-                            {% endif %}
-                        {% endfor %}
-                        {% if reported %}
-                            Reported
-                        {% else %}
-
-                        {% endif %}
-                    </td>
-                    <td>{{ item.getUser().getUsername() }}</td>
-                    <td class="d-flex justify-content-between">
-                        <div>
-                            <form method="get" action="{{ path('item_details', {'id': item.id}) }}">
-                                <button class="btn btn-info btn-sm">Info</button>
-                            </form>
-                        </div>
-
-                        <div id="admin_dashboard_buttons">
-                            <form method="post" action="{{ path('item_delete', {'id': item.id}) }}"
-                                  onsubmit="return confirm('Are you sure you really want to delete this item?');">
-                                <input type="hidden" name="_method" value="DELETE">
-                                <input type="hidden" name="csrf_token" value="{{ csrf_token('delete-item') }}"/>
-                                <button class="btn btn-outline-danger btn-sm">Delete</button>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% endif %}
-    </div>
         <div class="padding_admin_table">
-    {% if users == null %}
-        <div class="empty-items">
-            No Users found
-        </div>
-    {% else %}
-        <h1>Users</h1>
-        <br>
-        <table table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Username</th>
-                <th scope="col">E-mail</th>
-                <th scope="col">Reported</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for user in users %}
-                <tr>
-                    <th  scope="row">
-                        {{ user.username }}
-                    </th>
-                    <td>
-                        {{ user.email }}
-                    </td>
-                    <td>
-                        {% set reported = false %}
-                        {% for stats in user.getStatuses() %}
-                            {% if stats.getStatuses().getLabel() == 'reported' %}
-                                {% set reported = true %}
-                            {% endif %}
-                        {% endfor %}
-                        {% if reported %}
-                            Reported
-                        {% else %}
 
-                        {% endif %}
-                    </td>
-                    <td>
-                        {#options#}
-
-
-                        <div class="d-flex justify-content-between">
-                            {% set banned = false %}
-                            {% for stats in user.getStatuses() %}
-                                {% if stats.getStatuses().getLabel() == 'banned' %}
-                                    {% set banned = true %}
+            <h1>Items</h1>
+            <br>
+            {% if items == null %}
+                <div class="empty-items">
+                    No Items found
+                </div>
+            {% else %}
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Items</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Reported</th>
+                        <th scope="col">Owner</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for item in items %}
+                        <tr>
+                            {% for picture in pictures %}
+                                {% if picture.item.id  == item.getId() %}
+                                    <th scope="row"><img
+                                                src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
+                                                alt="{{ item.title }}" width="53px" height="53px">
+                                    </th>
                                 {% endif %}
                             {% endfor %}
-                            {% if banned %}
-                                <form method="post" action="{{ path('user_unban', {'id': user.id}) }}"
-                                      onsubmit="return confirm('Reactivate user?');">
-                                    <input type="hidden" name="_method" value="POST">
-                                    <input type="hidden" name="csrf_token_unbanuser"
-                                           value="{{ csrf_token('unban-user') }}"/>
-                                    <button class="btn btn-outline-warning btn-sm">Unban</button>
-                                </form>
-                            {% else %}
-                                <form method="post" action="{{ path('user_ban', {'id': user.id}) }}"
-                                      onsubmit="return confirm('Confirm user ban?');">
-                                    <input type="hidden" name="_method" value="POST">
-                                    <input type="hidden" name="csrf_token_banuser"
-                                           value="{{ csrf_token('ban-user') }}"/>
-                                    <button class="btn btn-warning btn-sm">Ban</button>
-                                </form>
-                            {% endif %}
-                            <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
-                                  onsubmit="return confirm('Confirm user DELETE? {{ user.username }}?');">
-                                <input type="hidden" name="_method" value="DELETE">
-                                <input type="hidden" name="csrf_token_rmuser" value="{{ csrf_token('delete-user') }}"/>
-                                <button class="btn btn-danger btn-sm">Delete</button>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                            <th scope="row">{{ item.title }}</th>
+                            <td>
+                                {% set reported = false %}
+                                {% for stats in item.getStatuses() %}
+                                    {% if stats.getStatuses().getLabel() == 'reported' %}
+                                        {% set reported = true %}
+                                    {% endif %}
+                                {% endfor %}
+                                {% if reported %}
+                                    Reported
+                                {% else %}
+
+                                {% endif %}
+                            </td>
+                            <td>{{ item.getUser().getUsername() }}</td>
+                            <td class="d-flex justify-content-between">
+                                <div>
+                                    <form method="get" action="{{ path('item_details', {'id': item.id}) }}">
+                                        <button class="btn btn-info btn-sm">Info</button>
+                                    </form>
+                                </div>
+
+                                <div id="admin_dashboard_buttons">
+                                    <form method="post" action="{{ path('item_delete', {'id': item.id}) }}"
+                                          onsubmit="return confirm('Are you sure you really want to delete this item?');">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token('delete-item') }}"/>
+                                        <button class="btn btn-outline-danger btn-sm">Delete</button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            {% endif %}
         </div>
-    {% endif %}
+        <div class="padding_admin_table">
+            {% if users == null %}
+            <div class="empty-items">
+                No Users found
+            </div>
+            {% else %}
+            <h1>Users</h1>
+            <br>
+            <table table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">Username</th>
+                    <th scope="col">E-mail</th>
+                    <th scope="col">Reported</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                    <tr>
+                        <th scope="row">
+                            {{ user.username }}
+                        </th>
+                        <td>
+                            {{ user.email }}
+                        </td>
+                        <td>
+                            {% set reported = false %}
+                            {% for stats in user.getStatuses() %}
+                                {% if stats.getStatuses().getLabel() == 'reported' %}
+                                    {% set reported = true %}
+                                {% endif %}
+                            {% endfor %}
+                            {% if reported %}
+                                Reported
+                            {% else %}
+
+                            {% endif %}
+                        </td>
+                        <td>
+                            {#options#}
+
+                            {% if app.user.id != user.id %}
+                                <div class="d-flex justify-content-between">
+                                    {% set banned = false %}
+                                    {% for stats in user.getStatuses() %}
+                                        {% if stats.getStatuses().getLabel() == 'banned' %}
+                                            {% set banned = true %}
+                                        {% endif %}
+                                    {% endfor %}
+                                    {% if banned %}
+                                        <form method="post" action="{{ path('user_unban', {'id': user.id}) }}"
+                                              onsubmit="return confirm('Reactivate user?');">
+                                            <input type="hidden" name="_method" value="POST">
+                                            <input type="hidden" name="csrf_token_unbanuser"
+                                                   value="{{ csrf_token('unban-user') }}"/>
+                                            <button class="btn btn-outline-warning btn-sm">Unban</button>
+                                        </form>
+                                    {% else %}
+                                        <form method="post" action="{{ path('user_ban', {'id': user.id}) }}"
+                                              onsubmit="return confirm('Confirm user ban?');">
+                                            <input type="hidden" name="_method" value="POST">
+                                            <input type="hidden" name="csrf_token_banuser"
+                                                   value="{{ csrf_token('ban-user') }}"/>
+                                            <button class="btn btn-warning btn-sm">Ban</button>
+                                        </form>
+                                    {% endif %}
+                                    <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
+                                          onsubmit="return confirm('Confirm user DELETE? {{ user.username }}?');">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <input type="hidden" name="csrf_token_rmuser"
+                                               value="{{ csrf_token('delete-user') }}"/>
+                                        <button class="btn btn-danger btn-sm">Delete</button>
+                                    </form>
+                                </div>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
     </div>
 {% endblock %}
