Fix email and punctuation

--- a/templates/mail/swap/swap-mail.html.twig
+++ b/templates/mail/swap/swap-mail.html.twig
@@ -12,11 +12,11 @@
 <h1>Hi {{ item.user.username }}</h1>
 
 <p>Another {{ 'APP.TITLE'|trans }} user by the name of {{ user.username }} is
-    interested in swapping something for your item: <strong>{{ item.title | lower }}</strong></p>
+    interested in swapping something for your item: <strong>{{ item.title | lower }}</strong>.</p>
 
-<p>She/he has sent the following message: <strong>{{ textComingFromSwapForm }}</strong></p>
+<p>She/he has sent the following message: <strong>{{ textComingFromSwapForm }}</strong>.</p>
 
-<p>If you are interested, please send her/him a message to the following {{ item.user.email }}</p>
+<p>If you are interested, please send her/him a message to the following {{ user.email }}.</p>
 
 <p>{{ 'APP.TITLE'|trans }} Team</p>
 
