--- a/templates/mail/report/report-mail.txt.twig
+++ b/templates/mail/report/report-mail.txt.twig
@@ -3,6 +3,6 @@
 
 The {{ item.title }}, belonging to {{ item.user.username }}, has been reported by one of our users as being {{ givenReportReason }}.
 
-The reporting user, {{ user.username }} has sent the following message.
+The reporting user, {{ user.username }} has sent the following message:
 
 "{{ textComingFromReportForm }}"
