--- a/templates/mail/report/report-mail.html.twig
+++ b/templates/mail/report/report-mail.html.twig
@@ -11,11 +11,12 @@
 <body>
 <h1>Hi Admin </h1><br>
 
-<p> The {{ item.title }}, belonging to {{ item.user.username }}, has been reported by one of our users as being {{ givenReportReason }}.<br>
+<p> The {{ item.title }}, belonging to {{ item.user.username }}, has been reported by
+    one of our users as being <{{ givenReportReason | lower }}.</p>
 
-    The reporting user, {{ user.username }} has sent the following message.</p>
+<p>The reporting user, {{ user.username }} has sent the following message:</p>
 
-"{{ textComingFromReportForm }}"
+<p>"{{ textComingFromReportForm }}"</p>
 
 <p>The Swamp Server</p>
 
