Add Google analytics

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
 
     {% include 'icons_header.html.twig' %}
+    {% include 'google_tracking.html.twig' %}
     
     {% block stylesheets %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
