updated colour and text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,7 +165,7 @@ a#navbar_gravatar.nav-link {
 }
 
 .active {
-    background-color: #5ff03f;
+    background-color: #336655;
 }
 
 
@@ -433,7 +433,7 @@ a#navbar_gravatar.nav-link {
 }
 
 .about_info h2 span {
-    color: #5ff03f;
+    color: #336655;
     font-weight: bold;
     font-size: 50px;
 
