--- a/templates/about/about.html.twig
+++ b/templates/about/about.html.twig
@@ -6,15 +6,15 @@
 
     <article class="about_info">
         <h2>About <span>{{ 'APP.TITLE'|trans }}</span> </h2>
-
+        <br>
         <p>
-            LëtzSwap! provides users a place where they can post unwanted items to swap them between themselves.
+            Our mission is to provide the world a simple to use platform, where local communities can quickly exchange their possessions.
         </p>
+        <br>
         <p>
-            Most of us are more and more aware about the effects of our purchase habits and communities are demanding
-            for more sustainable ways to answer their needs.
+            Letzswap is fast, free and sustainable. For more information, contact us through the form below:
         </p>
-        <p> Have any questions or inquiries?</p>
+        <br>
         <h2>Contact us </h2>
         {#{% include 'Contact/contact.html.twig' %}#}
         {{ form(contactForm) }}
