--- a/templates/item/new.html.twig
+++ b/templates/item/new.html.twig
@@ -22,8 +22,8 @@
         document.getElementById("item_picture")
             .addEventListener(
                 'change',
-                function(){
-                    document.querySelector("#item_picture + label").innerText = document.getElementById("item_picture").value;
+                function () {
+                    document.querySelector("#item_picture + label").innerText = document.getElementById("item_picture").files[0].name;
                 }
             )
     </script>
