--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -32,7 +32,7 @@
             <div class="d-flex justify-content-center flex-wrap">
                 {% for item in items %}
                     <div class="d-flex justify-content-center">
-                        <div class="card">
+                        <div class="card text-center">
                             <a href="{{ path('item_details', {'id': item.getId()}) }}">
                                 <img class="card-img-top"
                                      src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
