--- a/templates/icons_header.html.twig
+++ b/templates/icons_header.html.twig
@@ -1,8 +1,8 @@
-<link rel="shortcut icon" sizes="196x196" href="icons/favicon-196x196.png" />
-<link rel="icon" type="image/png" sizes="196x196" href="icons/favicon-196x196.png">
-<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="152x152" href="icons/favicon-152x152.png">
-<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="shortcut icon" sizes="196x196" href="/icons/favicon-196x196.png" />
+<link rel="icon" type="image/png" sizes="196x196" href="/icons/favicon-196x196.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="152x152" href="/icons/favicon-152x152.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 {#<link rel="mask-icon" href="%PUBLIC_URL%/icons/favicon.svg" />#}
-<link rel="manifest" href="manifest.json" />
+<link rel="manifest" href="/manifest.json" />
