--- a/templates/item/new.html.twig
+++ b/templates/item/new.html.twig
@@ -15,8 +15,9 @@
 
         {{ form_widget(form) }}
     </div>
+    <br>
     <div id="add_item_buttons" class="d-flex justify-content-between">
-        <button class="button">Add Item</button>
+        <button class="button btn-block">Add Item</button>
     </div>
     <script>
         document.getElementById("item_picture")
