--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -28,13 +28,12 @@
                         <tr>
                             {% for picture in pictures %}
                                 {% if picture.item.id  == item.getId() %}
-                                    <th scope="row"><img
-                                                src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
-                                                alt="{{ item.title }}" width="53px" height="53px">
+                                    <th scope="row"> <img src="{{ path('get_picture_content', {'picture': picture.getId()}) }}"
+                                                          alt="{{ item.title }}" width="53px" height="53px">
                                     </th>
                                 {% endif %}
                             {% endfor %}
-                            <th scope="row">{{ item.title }}</th>
+                            <th scope="row" >{{ item.title }}</th>
                             <td>
                                 {% set reported = false %}
                                 {% for stats in item.getStatuses() %}
@@ -46,31 +45,31 @@
                                     Reported
                                 {% else %}
 
-                        {% endif %}
-                    </td>
-                    <td>{{ item.getUser().getUsername() }}</td>
-                    <td class="d-flex justify-content-between">
-                        <div>
-                            <form method="get" action="{{ path('item_details', {'id': item.id}) }}">
-                                <button class="btn button">Info</button>
-                            </form>
-                        </div>
+                                {% endif %}
+                            </td>
+                            <td>{{ item.getUser().getUsername() }}</td>
+                            <td class="d-flex justify-content-between">
+                                <div>
+                                    <form method="get" action="{{ path('item_details', {'id': item.id}) }}">
+                                        <button class="btn button">Info</button>
+                                    </form>
+                                </div>
 
-                        <div id="admin_dashboard_buttons">
-                            <form method="post" action="{{ path('item_delete', {'id': item.id}) }}"
-                                  onsubmit="return confirm('Are you sure you really want to delete this item?');">
-                                <input type="hidden" name="_method" value="DELETE">
-                                <input type="hidden" name="csrf_token" value="{{ csrf_token('delete-item') }}"/>
-                                <button class="btn button-danger">Delete</button>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    {% endif %}
-    </div>
+                                <div id="admin_dashboard_buttons">
+                                    <form method="post" action="{{ path('item_delete', {'id': item.id}) }}"
+                                          onsubmit="return confirm('Are you sure you really want to delete this item?');">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token('delete-item') }}"/>
+                                        <button class="btn button-danger">Delete</button>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            {% endif %}
+        </div>
         <div class="padding_admin_table">
             {% if users == null %}
             <div class="empty-items">
@@ -91,7 +90,7 @@
                 <tbody>
                 {% for user in users %}
                     <tr>
-                        <th scope="row">
+                        <th  scope="row">
                             {{ user.username }}
                         </th>
                         <td>
@@ -104,35 +103,52 @@
                                     {% set reported = true %}
                                 {% endif %}
                             {% endfor %}
-                            {% if banned %}
-                                <form method="post" action="{{ path('user_unban', {'id': user.id}) }}"
-                                      onsubmit="return confirm('Reactivate user?');">
-                                    <input type="hidden" name="_method" value="POST">
-                                    <input type="hidden" name="csrf_token_unbanuser"
-                                           value="{{ csrf_token('unban-user') }}"/>
-                                    <button class="btn button-back">Unban</button>
-                                </form>
+                            {% if reported %}
+                                Reported
                             {% else %}
-                                <form method="post" action="{{ path('user_ban', {'id': user.id}) }}"
-                                      onsubmit="return confirm('Confirm user ban?');">
-                                    <input type="hidden" name="_method" value="POST">
-                                    <input type="hidden" name="csrf_token_banuser"
-                                           value="{{ csrf_token('ban-user') }}"/>
-                                    <button class="btn button-warning">Ban</button>
-                                </form>
+
                             {% endif %}
-                            <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
-                                  onsubmit="return confirm('Confirm user DELETE? {{ user.username }}?');">
-                                <input type="hidden" name="_method" value="DELETE">
-                                <input type="hidden" name="csrf_token_rmuser" value="{{ csrf_token('delete-user') }}"/>
-                                <button class="btn button-danger">Delete</button>
-                            </form>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                        </td>
+                        <td>
+                            {#options#}
+
+
+                            <div class="d-flex justify-content-between">
+                                {% set banned = false %}
+                                {% for stats in user.getStatuses() %}
+                                    {% if stats.getStatuses().getLabel() == 'banned' %}
+                                        {% set banned = true %}
+                                    {% endif %}
+                                {% endfor %}
+                                {% if banned %}
+                                    <form method="post" action="{{ path('user_unban', {'id': user.id}) }}"
+                                          onsubmit="return confirm('Reactivate user?');">
+                                        <input type="hidden" name="_method" value="POST">
+                                        <input type="hidden" name="csrf_token_unbanuser"
+                                               value="{{ csrf_token('unban-user') }}"/>
+                                        <button class="btn button-back">Unban</button>
+                                    </form>
+                                {% else %}
+                                    <form method="post" action="{{ path('user_ban', {'id': user.id}) }}"
+                                          onsubmit="return confirm('Confirm user ban?');">
+                                        <input type="hidden" name="_method" value="POST">
+                                        <input type="hidden" name="csrf_token_banuser"
+                                               value="{{ csrf_token('ban-user') }}"/>
+                                        <button class="btn button-warning">Ban</button>
+                                    </form>
+                                {% endif %}
+                                <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
+                                      onsubmit="return confirm('Confirm user DELETE? {{ user.username }}?');">
+                                    <input type="hidden" name="_method" value="DELETE">
+                                    <input type="hidden" name="csrf_token_rmuser" value="{{ csrf_token('delete-user') }}"/>
+                                    <button class="btn button-danger">Delete</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
         {% endif %}
     </div>
