swap now button

--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -40,7 +40,7 @@
                         {% if is_granted('ROLE_USER') %}
                             {% if (item.getUser.getId() != app.user.id) %}
                                 <a href="#">
-                                    <button id="swap_button" type="button" class="button btn">Swap now</button>
+                                    <button id="swap_button" type="button" class="button btn">Swap</button>
                                 </a>
                                 <a href="#">
                                     <button id="report_button" type="button" class="button-danger btn">Report</button>
