--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
         <!--Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html-->
 
-        <button class="btn btn-lg btn-primary" type="submit">
+        <button class="button btn-block" type="submit">
             {{ 'LOGIN.SUBMIT' | trans }}
         </button>
     </form>
